fix html divs, change collapse ui a bit move css, update css/js versions

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -396,13 +396,14 @@ A.purple:visited, a.purple, .purple { color: #740074; }
   color: #cc0000;
 }
 
-tr.device-overview:nth-child(odd) {
-  background: #ffffff;
-}
+.device-overview>.panel-body { padding-top: 0; padding-bottom: 0; }
+.device-overview>.panel-body>.row:nth-child(odd) { background-color: #f9f9f9; }
+.device-overview>.panel-body>.row:hover { background-color: #f5f5f5; }
+.device-overview>.panel-body>.row>div { padding: 3px 5px; }
+.device-overview>.panel-body>.row>div:first-child { font-weight: 500; }
 
-tr.device-overview:nth-child(even) {
-  background: #eeeeee;
-}
+#coordinates-row { cursor: pointer; }
+#location-map { padding: 15px; height: 400px; }
 
 a.list-device, a.list-device-ignored, a.list-device-down, a.list-device-ignored-up, a.list-device-disabled {
   font-weight: bold;
